styles for rider stories

--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -19,8 +19,7 @@
   src: url(scss/fonts/FuturaLTPro-Bold.otf);
 }
 /* ============== Button Styles ==============  */
-
-.btn-outline-blue > button, .btn-with-link-blue > a, .btn-outline-white > button, .btn-with-link-white > a, .btn-outline-black > button, .btn-with-link-black > a {
+.btn-outline-blue > button, .btn-with-link-blue > a, .btn-outline-white > button, .btn-with-link-white > a, .btn-outline-white-trans > button, .btn-outline-black > button, .btn-with-link-black > a {
   padding: 15px;
   background: #fff;
   font-size: 14px;
@@ -66,6 +65,8 @@
   color: #fff !important;
 }
 .btn-outline-white-trans > button {
+  padding: 10px 25px;
+  text-transform: uppercase;
   border: 3px solid #fff !important;
   color: #fff !important;
   transition: all 0.2s ease-in;
@@ -86,7 +87,6 @@
   background: #000 !important;
   color: #fff !important;
 }
-
 .btn-outline-black > button, .btn-with-link-black > a, nav.menu-main_menu-container ul.mk-responsive-nav li.menu-item-object-custom:nth-child(n+4) > a {
   border: 3px solid #000 !important;
   color: #000 !important;
@@ -917,7 +917,6 @@ span.vc_tta-title-text.display-none-accordion:after {
   left: 315px;
   top: 140px;
 }
-
 .about-text-block, .about-text-block-black {
   padding: 75px 0;
 }
@@ -1105,5 +1104,42 @@ span.vc_tta-title-text.display-none-accordion:after {
   }
   form.responsive-searchform {
     display: none;
+  }
+}
+.pic-text-row .pic-column {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 269px;
+}
+@media screen and (min-width: 768px) {
+  .pic-text-row .pic-column {
+    height: inherit;
+  }
+}
+.pic-text-row .mini-text-container {
+  max-width: 538px;
+  padding-top: 75px;
+  padding-bottom: 75px;
+}
+.pic-text-row .mini-text-container h2 {
+  color: #fff;
+}
+.pic-text-row .mini-text-container p {
+  color: #fff;
+}
+@media screen and (min-width: 692px) {
+  .pic-text-row .mini-text-container {
+    margin: 80px auto !important;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+}
+@media screen and (min-width: 1120px) {
+  .pic-text-row .mini-text-container p {
+    margin-left: 25px;
+  }
+  .pic-text-row .mini-text-container .vc_btn3-container a {
+    margin-left: 25px;
   }
 }
