--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -118,6 +118,8 @@ $h3-body: 27px; //20pts
 
 .btn-outline-white-trans > button {
   @extend %btn-outline;
+  padding: 10px 25px;
+  text-transform: uppercase;
   a{
       color: #fff;
       font-family: $h-font;
@@ -1408,3 +1410,43 @@ display: inline-block;
     }
 }
 
+// === 3/ 4 text and picture row === //
+.pic-text-row {
+    .pic-column {
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        height: 269px;
+        @media screen and (min-width:768px) {
+            height: inherit;
+        }
+    }
+    .mini-text-container {
+        max-width: 538px;
+        padding-top: 75px;
+        padding-bottom: 75px;        
+        h2 {
+            color:$white;
+        }
+        p {
+            color: $white;
+        }
+        @media screen and (min-width: 692px) {
+            margin: 80px auto !important;
+            padding-top: 0;
+            padding-bottom: 0;                    
+        }        
+        @media screen and (min-width:1120px) {
+            p {
+                margin-left: 25px;
+            }
+            .vc_btn3-container {
+                a {
+                    margin-left: 25px;
+                }
+            }
+        }
+
+    }
+
+}
