--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -1157,17 +1157,6 @@ span.vc_tta-title-text.display-none-accordion:after {
     margin-left: 50px;
   }
 }
-.blurb-column {
-  margin-bottom: 90px;
-}
-.blurb-column p {
-  color: #fff;
-}
-@media screen and (min-width: 768px) {
-  .blurb-column {
-    margin-bottom: 0;
-  }
-}
 .icon-next, .icon-prev {
   height: 30px !important;
   width: 30px !important;
@@ -1392,6 +1381,17 @@ span.vc_tta-title-text.display-none-accordion:after {
 .page-template-template-splash .home-gray-section .splash-gray-column-bottom div a:focus, .page-template-template-splash .home-gray-icon-section .splash-gray-column-bottom div a:focus, .page-template-template-splash .photos-gray-section .splash-gray-column-bottom div a:focus {
   color: #fff;
 }
+.blurb-column {
+  margin-bottom: 90px;
+}
+.blurb-column p {
+  color: #fff;
+}
+@media screen and (min-width: 768px) {
+  .blurb-column {
+    margin-bottom: 0;
+  }
+}
 .important-announce-header {
   margin-top: 70px;
 }
@@ -1466,4 +1466,46 @@ span.vc_tta-title-text.display-none-accordion:after {
 .rider-hub-events {
   margin-top: 75px;
   margin-bottom: 75px;
+}
+.page-template-template-faqs {
+  counter-reset: faqs-counter;
+}
+.page-template-template-faqs .master-holder h2 {
+  color: #000;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panels-container {
+  margin-bottom: 50px;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading {
+  pointer-events: auto;
+  counter-increment: faqs-counter;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a:before {
+  content: counter(faqs-counter,decimal-leading-zero) " ";
+  margin-right: 20px;
+  color: #0075c9;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a i {
+  position: absolute;
+  right: 0;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a i.fa-plus:before {
+  color: #0075c9;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a i.fa-minus:before {
+  color: #5d5d5d;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a span {
+  color: #000;
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a span:hover {
+  color: #0075c9;
+}
+@media screen and (max-width: 768px) {
+  .page-template-template-faqs .faqs-accordion .vc_tta-panel-heading h4 a span:after {
+    display: none;
+  }
+}
+.page-template-template-faqs .faqs-accordion .vc_tta-panel-body div p {
+  padding-left: 15%;
 }
